# adventofcode2024-kb

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: cuda_common.cmake
common/: CMakeLists.txt  cuda_utils.cuh
day01/: CMakeLists.txt  main.cu
day02/: CMakeLists.txt  main.cu
day03/: CMakeLists.txt  input.txt  main.cu
day04/: CMakeLists.txt  main.cu
